--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,7 @@ services:
       - appnetwork
     volumes:
      - ./node:/usr/src/app
+     - /usr/src/app/node_modules
     ports:
       - "3000:3000"
     depends_on:
