--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -39,6 +39,7 @@ services:
     tty: true
     volumes:
      - ./mysql:/var/lib/mysql
+     - ./setup.sql:/docker-entrypoint-initdb.d/setup.sql
     environment:
      - MYSQL_DATABASE=nodedb
      - MYSQL_ROOT_PASSWORD=root
